--- a/homepage/index.html
+++ b/homepage/index.html
@@ -6,31 +6,33 @@
     <title>AKAD.</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:600|Open+Sans" rel="stylesheet">
     <link href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-default max-width">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="#">AKAD.</a>
-                </div>
-                <div class="collapse navbar-collapse" id="myNavbar">
-                    <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#chooseUs">Choose us</a></li>
-                        <li><a href="#portfolio">Portfolio</a></li>
-                        <li><a href="#contact">Contact</a></li>
-                    </ul>
-                </div>
+        <nav class="navbar navbar-expand-md navbar-light max-width">
+            <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#myNavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <a class="navbar-brand" href="#">AKAD.</a>
+
+            <div class="collapse navbar-collapse" id="myNavbar">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#chooseUs">Choose us</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#portfolio">Portfolio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#contact">Contact</a>
+                    </li>
+                </ul>
             </div>
         </nav>
+
         <div class="header-wrapper text-center">
             <p class="text-uppercase">We're</p>
             <h1 class="text-uppercase">Creative Agency</h1>
@@ -40,13 +42,13 @@
         </div>
 
         <div class="container-fluid max-width">
-            <div class="row relative">
-                <div class="col-md-5">
+            <div class="row position-relative">
+                <div class="col-lg-5">
                     <div class="img-wrapper">
-                        <img class="img-responsive" src="img/header_image.jpg" alt="">
+                        <img class="img-fluid" src="img/header_image.jpg" alt="">
                     </div>
                 </div>
-                <div class="col-md-6 col-md-offset-1">
+                <div class="col-lg-6 col-lg-offset-1">
                     <h2 class="green-underline">HISTORY OF AGENCY</h2>
                     <p>
                         Porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia
@@ -56,7 +58,8 @@
                     </p>
                     <p class="collapse" id="historyReadMe">Additional "Read me" text</p>
                     <div class="btn-wrapper">
-                        <button class="btn btn-green text-uppercase" type="button" data-toggle="collapse" data-target="#historyReadMe">
+                        <button class="btn btn-green text-uppercase" type="button" data-toggle="collapse"
+                                data-target="#historyReadMe">
                             Read more
                         </button>
                     </div>
@@ -68,14 +71,16 @@
     <section id="chooseUs" class="container-fluid max-width">
         <div class="header-container">
             <h2 class="green-underline">Why choose us</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                et dolore magna aliqua.
+            </p>
         </div>
 
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-lg-6">
                 <div class="row">
-                    <div class="col-sm-6 text-xs-center">
-                        <div class="column-wrapper">
+                    <div class="col-md-6 text-center text-lg-left">
+                        <div class="d-inline-block">
                             <i class="ion-ios-infinite-outline"></i>
                             <h4>unlimited options</h4>
                             <ul class="list-unstyled">
@@ -86,8 +91,8 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col-sm-6 text-xs-center">
-                        <div class="column-wrapper">
+                    <div class="col-md-6 text-center text-lg-left">
+                        <div class="d-inline-block">
                             <i class="ion-ios-shuffle"></i>
                             <h4>DESIGN & DEVELOPMENT</h4>
                             <ul class="list-unstyled">
@@ -98,8 +103,8 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col-sm-6 text-xs-center">
-                        <div class="column-wrapper">
+                    <div class="col-md-6 text-center text-lg-left">
+                        <div class="d-inline-block">
                             <i class="ion-ios-cart-outline"></i>
                             <h4>e-commerce</h4>
                             <ul class="list-unstyled">
@@ -110,8 +115,8 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col-sm-6 text-xs-center">
-                        <div class="column-wrapper">
+                    <div class="col-md-6 text-center text-lg-left">
+                        <div class="d-inline-block">
                             <i class="ion-ios-settings"></i>
                             <h4>CUSTOMIZABLE DESIGN</h4>
                             <ul class="list-unstyled">
@@ -124,8 +129,8 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-5 col-md-offset-1 hidden-xs hidden-sm">
-                <img class="img-responsive" src="img/about.jpg" alt="">
+            <div class="col-lg-5 col-lg-offset-1 d-none d-lg-block text-center">
+                <img class="img-fluid" src="img/about.jpg" alt="">
             </div>
         </div>
     </section>
@@ -133,11 +138,13 @@
     <section id="portfolio" class="container-fluid max-width">
         <div class="header-container">
             <h2 class="green-underline">our portfolio</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+                ut labore et dolore magna aliqua.
+            </p>
         </div>
 
         <div class="row">
-            <div class="col-lg-2 col-sm-3">
+            <div class="col-xl-2 col-md-3">
                 <div class="wrapper">
                     <h3>choose category</h3>
                     <ul class="filter-menu list-unstyled">
@@ -150,35 +157,35 @@
                     </ul>
                 </div>
             </div>
-            <div class="col-lg-10 col-sm-9">
+            <div class="col-xl-10 col-md-9">
                 <div class="isotope-grid">
                     <div class="grid-sizer"></div>
                     <div class="grid-item webdesign graphic">
-                        <img class="img-responsive" src="img/Layer_5.jpg" alt="">
+                        <img class="img-fluid" src="img/Layer_5.jpg" alt="">
                     </div>
                     <div class="grid-item graphic">
-                        <img class="img-responsive" src="img/Layer_6.jpg" alt="">
+                        <img class="img-fluid" src="img/Layer_6.jpg" alt="">
                     </div>
                     <div class="grid-item logo advertisement">
-                        <img class="img-responsive" src="img/Layer_7.jpg" alt="">
+                        <img class="img-fluid" src="img/Layer_7.jpg" alt="">
                     </div>
                     <div class="grid-item fashion advertisement">
-                        <img class="img-responsive" src="img/Layer_8.jpg" alt="">
+                        <img class="img-fluid" src="img/Layer_8.jpg" alt="">
                     </div>
                     <div class="grid-item advertisement">
-                        <img class="img-responsive" src="img/Layer_9.jpg" alt="">
+                        <img class="img-fluid" src="img/Layer_9.jpg" alt="">
                     </div>
                     <div class="grid-item fashion logo">
-                        <img class="img-responsive" src="img/Layer_10.jpg" alt="">
+                        <img class="img-fluid" src="img/Layer_10.jpg" alt="">
                     </div>
                     <div class="grid-item advertisement">
-                        <img class="img-responsive" src="img/Layer_11.jpg" alt="">
+                        <img class="img-fluid" src="img/Layer_11.jpg" alt="">
                     </div>
                     <div class="grid-item advertisement">
-                        <img class="img-responsive" src="img/Layer_13.jpg" alt="">
+                        <img class="img-fluid" src="img/Layer_13.jpg" alt="">
                     </div>
                     <div class="grid-item fashion">
-                        <img class="img-responsive" src="img/Layer_14.jpg" alt="">
+                        <img class="img-fluid" src="img/Layer_14.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -188,11 +195,11 @@
     <section id="contact">
         <div class="container-fluid max-width">
             <div class="row">
-                <div class="col-sm-6">
+                <div class="col-md">
                     <h2 class="text-inverse">YOU THINK WE'RE COOL ? LET'S WORK TOGETHER</h2>
                     <button class="btn btn-green btn-inverse">Get in touch</button>
                 </div>
-                <div class="col-sm-6">
+                <div class="col-md">
                     <div class="white-bg">
                         <h3>STAY INFORMED WITH OUR NEWSLETTER</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
@@ -200,7 +207,7 @@
                         </p>
                         <div class="input-group">
                             <input type="email" class="form-control" placeholder="YOUR EMAIL">
-                            <span class="input-group-btn">
+                            <span class="input-group-append">
                                 <button class="btn btn-green" type="button">Send</button>
                             </span>
                         </div><!-- /input-group -->
@@ -212,34 +219,41 @@
 
     <footer class="container-fluid max-width">
         <div class="row">
-            <div class="col-sm-7">
+            <div class="col-lg-7 text-center text-lg-left">
                 <ul class="list-inline bottom-menu">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About us</a></li>
-                    <li><a href="#">services</a></li>
-                    <li><a href="#">portfolio</a></li>
-                    <li><a href="#">blog</a></li>
-                    <li><a href="#">contact us</a></li>
+                    <li class="list-inline-item mr-0"><a href="#">Home</a></li>
+                    <li class="list-inline-item mr-0"><a href="#">About us</a></li>
+                    <li class="list-inline-item mr-0"><a href="#">services</a></li>
+                    <li class="list-inline-item mr-0"><a href="#">portfolio</a></li>
+                    <li class="list-inline-item mr-0"><a href="#">blog</a></li>
+                    <li class="list-inline-item mr-0"><a href="#">contact us</a></li>
                 </ul>
             </div>
-            <div class="col-sm-5">
-                <p class="created">Created by akhouad 2016. All Rights Reserved</p>
+            <div class="col-lg-5">
+                <p class="text-center text-lg-right">Created by akhouad 2016. All Rights Reserved</p>
             </div>
         </div>
-        <div class="clearfix">
-            <ul class="list-inline pull-right">
-                <li><a href="#" target="_blank"><i class="ion-social-facebook"></i></a></li>
-                <li><a href="#" target="_blank"><i class="ion-social-twitter"></i></a></li>
-                <li><a href="#" target="_blank"><i class="ion-social-youtube"></i></a></li>
-                <li><a href="#" target="_blank"><i class="ion-social-linkedin"></i></a></li>
-                <li><a href="#" target="_blank"><i class="ion-social-pinterest"></i></a></li>
-                <li><a href="#" target="_blank"><i class="ion-social-instagram"></i></a></li>
+        <div class="text-center text-lg-right">
+            <ul class="list-inline">
+                <li class="list-inline-item"><a href="#" target="_blank"><i class="ion-social-facebook"></i></a></li>
+                <li class="list-inline-item"><a href="#" target="_blank"><i class="ion-social-twitter"></i></a></li>
+                <li class="list-inline-item"><a href="#" target="_blank"><i class="ion-social-youtube"></i></a></li>
+                <li class="list-inline-item"><a href="#" target="_blank"><i class="ion-social-linkedin"></i></a></li>
+                <li class="list-inline-item"><a href="#" target="_blank"><i class="ion-social-pinterest"></i></a></li>
+                <li class="list-inline-item"><a href="#" target="_blank"><i class="ion-social-instagram"></i></a></li>
             </ul>
         </div>
     </footer>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+            integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+            integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous">
+    </script>
     <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
     <script src="script.js"></script>
 </body>
